welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:4: error: Invalid literal number
      setPos(x,2y)
               ^ZigZag:4: error: illegal start of simple expression
      setPos(x,2y)
               ^ZigZag:7: error: ')' expected but '}' found.
    } cpt+=8
    ^ZigZag:7: error: ';' expected but integer literal found.
    } cpt+=8
           ^